# cookiecutters

./: README.md
haskell-nix/: cookiecutter.json
haskell-nix/{{ cookiecutter.repo_name }}/: README.md  default.nix  nixpkgs-source.nix  package.yaml  release.nix  shell.nix
haskell-nix/{{cookiecutter.project_name}}/: README.md  hie.yaml  project.nix  {{cookiecutter.project_name}}.cabal
haskell-nix/{{cookiecutter.project_name}}/src/: Main.hs  Paths.hs
haskell-nix/{{cookiecutter.project_name}}/src/{{cookiecutter.module_root}}/: Lib.hs
haskell.nix/: cookiecutter.json  tags
haskell.nix-old/: connect4.cabal  default.nix  nixpkgs.nix  pkgs.nix  shell.nix  tags
haskell.nix-old/.plan.nix/: connect4.nix
haskell.nix-old/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
haskell.nix-old/nix/: sources.json
haskell.nix-old/src/: Lib.hs
haskell.nix/{{ cookiecutter.name }}/: .gitignore  README.md  configure.sh  hie.yaml  hoogle.sh  shell-nixpkgs.nix  shell.nix  {{cookiecutter.name}}.cabal
haskell.nix/{{ cookiecutter.name }}/execs/: {{cookiecutter.name}}.hs
haskell.nix/{{ cookiecutter.name }}/haskell.nix/: default-pinned.nix
haskell.nix/{{ cookiecutter.name }}/lib/: Lib.hs
haskell.nix/{{ cookiecutter.name }}/nix/: sources.json
nixpkgs-haskell/: cookiecutter.json
nixpkgs-haskell/{{ cookiecutter.repo_name }}/: README.md  nixpkgs-source.nix  package.yaml  release.nix
nixpkgs-haskell/{{ cookiecutter.repo_name }}/nix/: sources.json
nixpkgs-haskell/{{ cookiecutter.repo_name }}/src/: Main.hs
nixpkgs-haskell/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.module_root }}/: Lib.hs
