name:           connect4
version:        0.1.0.0
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
      C4.Lib
      Main
  other-modules:
      Paths_connect4
  hs-source-dirs:
      src/
  ghc-options: -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-patterns -fwarn-overlapping-patterns -fwarn-incomplete-record-updates -fno-warn-deprecations -O2
  build-depends:
      base
    , containers
    -- , aeson
    -- , array
    -- , bytestring
    -- , data-default
    -- , directory
    -- , exceptions
    -- , extra
    -- , filepath
    -- , megaparsec
    -- , microlens-platform
    -- , microlens-th
    -- , mwc-random
    -- , optparse-applicative
    -- , parser-combinators
    -- , process
    -- , product-profunctors
    -- , profunctors
    -- , random
    -- , random-fu
    -- , random-source
    -- , stm
    -- , text
    -- , time
    -- , vector
    -- , yaml
    -- , http-client
    -- , attoparsec
    -- , mtl
    -- , split
  default-language: Haskell2010
